updating docker files